Fix header alignment in RTL languages (#638)
* Fix header alignment in RTL languages

* Optimize padding for touch devices

--- a/src/components/Header/SidebarToggle.css
+++ b/src/components/Header/SidebarToggle.css
@@ -1,6 +1,6 @@
 #menu-toggle {
 	--border-color-default: transparent;
-	margin-right: -1.5rem;
+	margin-inline-end: -0.25rem;
 	transition-property: border-color, background-color, color;
 }
 
@@ -8,12 +8,6 @@
 	--background-color-default: var(--theme-dim-lighter);
 	--text-color-default: var(--text-color-hocus);
 	--border-color-default: var(--border-color-hocus);
-}
-
-@media (hover: hover) {
-	#menu-toggle {
-		margin-right: -1rem;
-	}
 }
 
 @media (min-width: 50em) {
